3 of 6 stages completed

--- a/Topics/section-info.yaml
+++ b/Topics/section-info.yaml
@@ -10,3 +10,5 @@ content:
   - Preconditions and postconditions
   - Tokenization
   - Regexps in programs
+  - Set operations
+  - Algorithms in Python
