--- a/Easy Rider Bus Company/Bus line info/task-info.yaml
+++ b/Easy Rider Bus Company/Bus line info/task-info.yaml
@@ -92,5 +92,8 @@ files:
       if __name__ == '__main__':    EasyRiderStage3('easyrider.easyrider').run_tests()
     learner_created: false
 feedback_link: https://hyperskill.org/learn/step/10890#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: "Mon, 29 Jan 2024 08:09:39 UTC"
 record: -1
