--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -4,7 +4,7 @@ hyperskill_project:
   is_template_based: false
   use_ide: true
   environment: unittest
-update_date: "Sun, 28 Jan 2024 07:46:13 UTC"
+update_date: "Mon, 29 Jan 2024 08:06:23 UTC"
 stages:
   - id: 680
     step: 10888
@@ -14,7 +14,7 @@ stages:
     is_completed: true
   - id: 682
     step: 10890
-    is_completed: false
+    is_completed: true
   - id: 683
     step: 10891
     is_completed: false
