--- a/Easy Rider Bus Company/Special stops/task-info.yaml
+++ b/Easy Rider Bus Company/Special stops/task-info.yaml
@@ -101,5 +101,8 @@ files:
       if __name__ == '__main__':    EasyRiderStage4('easyrider.easyrider').run_tests()
     learner_created: false
 feedback_link: https://hyperskill.org/learn/step/10891#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: "Tue, 30 Jan 2024 08:32:30 UTC"
 record: -1
