--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -4,7 +4,7 @@ hyperskill_project:
   is_template_based: false
   use_ide: true
   environment: unittest
-update_date: "Mon, 29 Jan 2024 08:06:23 UTC"
+update_date: "Tue, 30 Jan 2024 08:29:27 UTC"
 stages:
   - id: 680
     step: 10888
@@ -17,7 +17,7 @@ stages:
     is_completed: true
   - id: 683
     step: 10891
-    is_completed: false
+    is_completed: true
   - id: 684
     step: 10892
     is_completed: false
